<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hint_nombre_persona"
            android:layout_weight="2"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/muestra_nombre"
            android:layout_weight="3"
            android:textStyle="italic"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hint_cedula"
            android:layout_weight="2"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCedula"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/muestra_cedula"
            android:layout_weight="3"
            android:textStyle="italic"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hint_fecha"
            android:layout_weight="2"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvFecha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/muestra_fecha"
            android:layout_weight="3"
            android:textStyle="italic"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hint_hora"
            android:layout_weight="2"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvHora"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/muestra_hora"
            android:layout_weight="3"
            android:textStyle="italic"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hint_temperatura"
            android:layout_weight="2"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTemperatura"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/muestra_temperatura"
            android:layout_weight="3"
            android:textStyle="italic"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hint_observacion"
            android:layout_weight="2"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvObservacion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hint_observacion"
            android:layout_weight="3"
            android:textStyle="italic"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hint_proyecto"
            android:layout_weight="2"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvProyecto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pref_proyecto"
            android:layout_weight="3"
            android:textStyle="italic"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hint_turno_trabajo"
            android:layout_weight="2"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTurnoTrabajo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pref_turno_trabajo"
            android:layout_weight="3"
            android:textStyle="italic"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hint_sitio_trabajo"
            android:layout_weight="2"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSitioTrabajo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pref_sitio_trabajo"
            android:layout_weight="3"
            android:textStyle="italic"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hint_tipo"
            android:layout_weight="2"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTipo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pref_tipo"
            android:layout_weight="3"
            android:textStyle="italic"/>

    </LinearLayout>


</LinearLayout>