<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/tfUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_usuario"
        android:layout_above="@+id/tfClave"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="7dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_baseline_error_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etUsuario"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/tfClave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_clave"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="15dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_baseline_error_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etClave"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbMantenerSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mantener_sesion"
        android:layout_alignStart="@+id/tfClave"
        android:layout_below="@+id/tfClave"
        android:layout_alignLeft="@+id/tfClave" />

<!--    <com.google.android.material.checkbox.MaterialCheckBox-->
<!--        android:id="@+id/cbMostrarClave"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/mostrar_clave"-->
<!--        android:layout_alignStart="@+id/cbMantenerSesion"-->
<!--        android:layout_below="@id/cbMantenerSesion"-->
<!--        android:layout_alignLeft="@+id/cbMantenerSesion" />-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnIniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        android:layout_below="@id/cbMantenerSesion"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="#B0000000"
        android:id="@+id/llIniciandoSesion"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:elevation="5dp">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iniciando_sesion"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="#FFFFFF" />

    </LinearLayout>


</RelativeLayout>